{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 184,
  "lineage": "863fc0ee-8d32-c9a8-6d69-7a5aaf8794f1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00de6c6491fdd3ef5",
            "arn": "arn:aws:ec2:eu-west-2:999113433401:instance/i-0d0d69ae145433821",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d0d69ae145433821",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "altschool",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07c022d062301c657",
            "private_dns": "ip-172-31-34-17.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.34.17",
            "public_dns": "ec2-3-10-211-230.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.10.211.230",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04ea27a4cf16f6753",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "altschool-ec2-security-group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b451301888b5cbe3",
            "tags": {
              "name": "ALT SCHOOL"
            },
            "tags_all": {
              "name": "ALT SCHOOL"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01f131d7ed25b8628"
            ]
          },
          "dependencies": [
            "aws_key_pair.ec2_key",
            "aws_security_group.ec2_security_group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00de6c6491fdd3ef5",
            "arn": "arn:aws:ec2:eu-west-2:999113433401:instance/i-09d3c48b17d842e84",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09d3c48b17d842e84",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "altschool",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09ce54fef64107cce",
            "private_dns": "ip-172-31-45-134.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.45.134",
            "public_dns": "ec2-3-8-188-26.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.8.188.26",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d37d78a7c6c6b0d5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "altschool-ec2-security-group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b451301888b5cbe3",
            "tags": {
              "name": "ALT SCHOOL"
            },
            "tags_all": {
              "name": "ALT SCHOOL"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01f131d7ed25b8628"
            ]
          },
          "dependencies": [
            "aws_key_pair.ec2_key",
            "aws_security_group.ec2_security_group"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00de6c6491fdd3ef5",
            "arn": "arn:aws:ec2:eu-west-2:999113433401:instance/i-0ecc69610150f3e99",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ecc69610150f3e99",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "altschool",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08bd99d5002835a9d",
            "private_dns": "ip-172-31-46-118.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.46.118",
            "public_dns": "ec2-13-41-188-161.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.41.188.161",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-084c4639337ca9d11",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "altschool-ec2-security-group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b451301888b5cbe3",
            "tags": {
              "name": "ALT SCHOOL"
            },
            "tags_all": {
              "name": "ALT SCHOOL"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01f131d7ed25b8628"
            ]
          },
          "dependencies": [
            "aws_key_pair.ec2_key",
            "aws_security_group.ec2_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ec2_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:999113433401:loadbalancer/app/alt-school-ec2-alb/7a05c79cdb8eaaa2",
            "arn_suffix": "app/alt-school-ec2-alb/7a05c79cdb8eaaa2",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alt-school-ec2-alb-1765181564.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:999113433401:loadbalancer/app/alt-school-ec2-alb/7a05c79cdb8eaaa2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alt-school-ec2-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-022e48646cb607b9a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0282b9bac3d87157b"
              },
              {
                "subnet_id": "subnet-0b451301888b5cbe3"
              },
              {
                "subnet_id": "subnet-0bad97ec16b1da583"
              }
            ],
            "subnets": [
              "subnet-0282b9bac3d87157b",
              "subnet-0b451301888b5cbe3",
              "subnet-0bad97ec16b1da583"
            ],
            "vpc_id": "vpc-06c70605370aeed4f",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.alb_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ec2_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:999113433401:listener/app/alt-school-ec2-alb/7a05c79cdb8eaaa2/9536840cbe81454c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:999113433401:targetgroup/alt-school-ec2-tg/fd0b76f61ac2337d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:999113433401:listener/app/alt-school-ec2-alb/7a05c79cdb8eaaa2/9536840cbe81454c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:999113433401:loadbalancer/app/alt-school-ec2-alb/7a05c79cdb8eaaa2",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ec2_alb",
            "aws_lb_target_group.ec2_tg",
            "aws_security_group.alb_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ec2_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:999113433401:targetgroup/alt-school-ec2-tg/fd0b76f61ac2337d",
            "arn_suffix": "targetgroup/alt-school-ec2-tg/fd0b76f61ac2337d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:999113433401:targetgroup/alt-school-ec2-tg/fd0b76f61ac2337d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "alt-school-ec2-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06c70605370aeed4f"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ec2_tg_attachments_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:999113433401:targetgroup/alt-school-ec2-tg/fd0b76f61ac2337d-20230201231744266800000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:999113433401:targetgroup/alt-school-ec2-tg/fd0b76f61ac2337d",
            "target_id": "i-0d0d69ae145433821"
          },
          "dependencies": [
            "aws_instance.ec2_instance",
            "aws_key_pair.ec2_key",
            "aws_lb_target_group.ec2_tg",
            "aws_security_group.ec2_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ec2_tg_attachments_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:999113433401:targetgroup/alt-school-ec2-tg/fd0b76f61ac2337d-20230201231744046700000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:999113433401:targetgroup/alt-school-ec2-tg/fd0b76f61ac2337d",
            "target_id": "i-09d3c48b17d842e84"
          },
          "dependencies": [
            "aws_instance.ec2_instance",
            "aws_key_pair.ec2_key",
            "aws_lb_target_group.ec2_tg",
            "aws_security_group.ec2_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ec2_tg_attachments_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:999113433401:targetgroup/alt-school-ec2-tg/fd0b76f61ac2337d-20230201231743838700000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:999113433401:targetgroup/alt-school-ec2-tg/fd0b76f61ac2337d",
            "target_id": "i-0ecc69610150f3e99"
          },
          "dependencies": [
            "aws_instance.ec2_instance",
            "aws_key_pair.ec2_key",
            "aws_lb_target_group.ec2_tg",
            "aws_security_group.ec2_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:999113433401:security-group/sg-022e48646cb607b9a",
            "description": "Allow Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-022e48646cb607b9a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "altschool-alb-security-group",
            "name_prefix": "",
            "owner_id": "999113433401",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06c70605370aeed4f"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:999113433401:security-group/sg-01f131d7ed25b8628",
            "description": "Allow Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01f131d7ed25b8628",
            "ingress": [],
            "name": "altschool-ec2-security-group",
            "name_prefix": "",
            "owner_id": "999113433401",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06c70605370aeed4f"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "http",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "http",
            "from_port": 80,
            "id": "sgrule-1221137296",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01f131d7ed25b8628",
            "security_group_rule_id": "sgr-050a760ca165194d7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2_security_group"
          ]
        },
        {
          "index_key": "ssh",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "ssh",
            "from_port": 22,
            "id": "sgrule-4265823781",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01f131d7ed25b8628",
            "security_group_rule_id": "sgr-0baba783b6f3815ab",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2_security_group"
          ]
        },
        {
          "index_key": "tls",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "tls",
            "from_port": 443,
            "id": "sgrule-1406984703",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01f131d7ed25b8628",
            "security_group_rule_id": "sgr-06429701c45ac8ee3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2_security_group"
          ]
        }
      ]
    }
  ]
}